# aicore0624

./: .gitignore  AG_UI_IMPLEMENTATION_PLAN.md  AICore_Comprehensive_Capability_Assessment_Report.md  GITHUB_UPLOAD_SUMMARY.md  MCP_Directory_Refactor_Plan.md  Mac_Execution_Guide.md  Mac_Integration_Deployment_Package_Summary.md  ONE_CLICK_DEPLOYMENT_README.md  PROJECT_DELIVERY_COMPLETE_REPORT.md  PowerAutomation-v2_Removal_Analysis_Report.md  PowerAutomation-v2_Removal_Complete_Report.md  PowerAutomation_Web_前端修复测试报告.md  PowerAutomation_v2_vs_Core_Capability_Comparison_Report.md  QUICKSTART_SMARTUI.md  README.md  SMARTUI_CAPABILITIES_GUIDE.md  SMARTUI_COMPARISON_REPORT.md  SMARTUI_ENHANCEMENT_PROPOSAL.md  SMARTUI_FIX_REPORT.md  SMARTUI_UPDATE_FILES_LIST.md  SmartUI_Architecture_Design.md  SmartUI_User_Guide.md  TEST_FLOW_MCP_SOP.md  backup_reorganization_final.md  claude_code_enhanced_context_manager.py  claude_code_vs_manus_test_results_20250626_172903.json  deep_testing_framework.py  deploy_human_loop_integration_tool.sh  deploy_to_cursor.sh  deploy_vsix.sh  deploy_vsix_mac.sh  deployment_reorganization_summary.md  detect_mac_public_ip.sh  enhanced_test_flow_mcp_v5_markdown_reports_index.md  enhanced_vscode_installer_mcp_registration_check_20250624_001747.json  enhanced_vscode_installer_mcp_registration_check_20250624_001833.json  enhanced_vscode_installer_mcp_registration_result_20250624_002244.json  human_loop_mcp_analysis.md  index.html  init_aicore.sh  (+26 more)
ClaudeSDKMCP_v2.0.0/: .gitignore  config.py  requirements.txt  setup.py
PowerAutomation/: README.md  curf_test_results.json  curf_test_script.sh  fully_dynamic_mcp_server.py  fully_integrated_system.py  requirements.txt  test_kilocode_integration.py
PowerAutomation-v2/: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
PowerAutomation/actions/: action_executor.py  action_executor_mcp_support.py
PowerAutomation/components/: SOP_Components_Directory.md  __init__.py  aicore_requirement_processor_mcp.py  claude_code_primary_router.py  claude_code_real_router.py  cloud_search_mcp.py  code_generation_mcp.py  dynamic_expert_registry.py  enhanced_smartinvention_mcp_v3.py  enhanced_test_flow_mcp_v51.py  general_processor_mcp.py  local_mcp_adapter.py  manus_adapter_mcp.py  smartinvention_adapter_mcp.py  smartinvention_claude_code_adapter.py  tool_registry_manager.py  web_management_interface.py
PowerAutomation/config/: config.py  endpoint_mapping.py  enhanced_config.py  enhanced_vscode_installer_mcp_registration_check_20250624_002501.json  (+1 more)
PowerAutomation_local/: README.md  manus_replay_chain_core.py  mcp_manus_integration.py  powerautomation_local_mcp.py  start.sh  test_powerautomation_mcp.py
PowerAutomation_local_backup_20250625_050651/: INSTALLATION_GUIDE.md  PowerAutomation_Auto_Deploy_Success_Report.md  README_v3.0.0.md  __init__.py  basic_test.py  cli.py  config.toml  mcp_manus_integration.py  mcp_server.py  package_project.sh  vsix_auto_deployer.py
agent_admin/: README.md  start_local.sh
backup/: enhanced_vscode_installer_mcp_registration_config_20250624_002244.json  vsix_test_result_1750736440.json
config/: README.md  api_config.template.json
deployment/: production_deployment_manager.py
docs/: Automated_Verification_Design.md  ENHANCEMENT_CHANGELOG.md  PowerAutomation_Release_Verification_Summary.md  README.md  enhanced_test_flow_mcp_v5_complete_markdown_report.md  enhanced_test_flow_mcp_v5_optimization_summary.md  enhanced_test_flow_mcp_v5_testing_guide.md  vsix_deployment_code_architecture.md  vsix_deployment_strategy_analysis.md  vsix_deployment_workflow_documentation.md
docs_old/: aicore0623_to_0624_summary.md  enhanced_test_flow_mcp_v5_quick_guide.md  enhanced_test_flow_mcp_v5_summary.md  enhanced_test_flow_mcp_v5_technical_report.md  smartinvention_mcp_api_guide.md
powerautomation_web/: README.md  smartui_fixed.html  start.sh
scripts/: test_recording_replay.sh
smartinvention_api_examples/: README.md  test_config.json
test_flow_api_examples/: README.md  run_tests.py
tests/: README.md
(+496 files in other folders)
